Fix live card zero state jumping

--- a/src/components/LiveCard/LiveCard.module.scss
+++ b/src/components/LiveCard/LiveCard.module.scss
@@ -154,7 +154,7 @@
 
 .wrapperSkeleton {
   width: 100%;
-  height: 436px;
+  height: 408px;
   border-radius: var(--radii-large);
   background: var(--color-background-muted-default);
 }
